# kairos

./: .env  .gitignore  CONTRIBUTING.md  FEATURE_SUGGESTIONS.md  IMPLEMENTATION_SUMMARY.md  Makefile  ORCHESTRATION_QUICKSTART.md  README.md  SYSTEM_OVERVIEW.md  demo_orchestration.py  docker-compose.yml  env.example
.github/: FUNDING.yml  (+1 more)
backend/: Dockerfile  README.md  demo_smart_scheduling.py  demo_suggestions.py  env.example  init.sql  main.py  migrate.py  pyproject.toml
backend/src/backend/: app.py
backend/src/backend/config/: __init__.py  auth.py  settings.py
backend/src/backend/models/: database.py  schemas.py
backend/src/backend/routes/: __init__.py  assistant.py  categories.py  events.py  orchestration.py  smart_scheduling.py  suggestions.py
backend/src/backend/services/: __init__.py  assistant_service.py  auth_service.py  category_service.py  goal_service.py  multi_agent_orchestrator_service.py  need_classifier_service.py  orchestration_service.py  rules_engine_service.py  scheduler_service.py  smart_scheduler_service.py  travel_service.py
backend/src/kairos_backend/: app.py
backend/src/kairos_backend/config/: auth.py  database.py  settings.py
backend/src/kairos_backend/models/: database.py  schemas.py
backend/src/kairos_backend/routes/: __init__.py  auth.py  goals.py  integrations.py  scheduling.py
backend/src/kairos_backend/services/: calendar_integration_service.py
backend/tests/: __init__.py  test_api.py  test_calendar_integration.py  test_orchestration.py  test_rules_engine.py  test_smart_scheduler_service.py  test_travel_service.py
(+109 files in other folders)
