[project]
name = "kairos-backend"
version = "0.1.0"
description = "Backend intelligent pour agenda avec scheduling automatique"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "python-dateutil>=2.8.2",
    "alembic>=1.13.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.2",
    "psycopg2-binary>=2.9.7",
    "openai>=1.3.0",
    "python-dotenv>=1.0.0",
    "caldav>=1.3.9",
    "icalendar>=5.0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.2",
    "black>=23.11.0",
    "isort>=5.12.0",
    "mypy>=1.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
